--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,127 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background-color: #2c2c2c;
   font-family: "Raleway", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  color: white;
+}
+
+/* 
+header
+ */
+
+.header {
+  width: 100%;
+  height: 100px;
+  background: #2c2c2c;
+  overflow: hidden;
+  position: fixed;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.a-first {
+  text-decoration: none;
+  color: white;
+  font-size: 28px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0 40px 0 40px;
+  transition: 0.5s ease-in-out;
+}
+
+.a-first:hover {
+  color: #00fff0;
+}
+
+.ul-first {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 162px;
+  margin-right: 162px;
+  align-items: center;
+  padding: 0;
+}
+
+span {
+  color: #00fff0;
+}
+
+/* 
+section 1
+ */
+
+.section-first {
+  width: 100%;
+  height: 900px;
+  overflow: hidden;
+  background: url("../images/bg1.jpg") no-repeat center fixed;
+}
+
+.div-first {
+  display: flex;
+  justify-content: space-between;
+  padding: 100px 0 0 0;
+}
+
+.div-third {
+  padding: 50px 150px 0 0;
+}
+
+.img-first {
+  width: 600px;
+  transition: 0.5s;
+}
+
+.img-first:hover {
+  width: 650px;
+}
+
+.p-first {
+  color: #fff;
+  margin-left: 162px;
+  margin-top: 299px;
+  font-size: 26px;
+  width: 700px;
+  margin-bottom: 50px;
+}
+
+.a-second {
+  background: #fff;
+  border-radius: 50px;
+  color: #2c2c2c;
+  margin-left: 162px;
+  text-decoration: none;
+  padding: 15px 30px;
+  transition: 0.3s;
+}
+
+.a-second:hover {
+  background: rgb(212, 212, 212);
+}
+
+/* 
+section 2
+ */
+
+.section-second {
+  width: 100%;
+  height: 900px;
+  overflow: hidden;
+  background: url("../images/bg5.jpg") no-repeat center;
 }
