--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  display: block;
   background: #2c2c2c;
 }
 
@@ -95,7 +94,7 @@ section 1
 }
 
 .img-first:hover {
-  width: 650px;
+  transform: scale(1.1);
 }
 
 .p-first {
@@ -165,7 +164,7 @@ section 2
 }
 
 .img-2-1:hover {
-  width: 650px;
+  transform: scale(1.2);
 }
 
 .div2-2 {
@@ -295,9 +294,9 @@ section 4
 
 .section-fourth {
   width: 100%;
-  height: 100vh;
+  height: 700px;
   overflow: hidden;
-  background-image: url("../images/bg3.jpg");
+  background-image: url("../images/bg3-2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -308,11 +307,11 @@ section 4
   font-size: 44px;
   font-weight: 900;
   text-align: center;
-  margin-top: 150px;
+  margin-top: 0px;
 }
 
 .ul-4-1 {
-  margin: 0 150px 0 110px;
+  margin: 0 70px 0 30px;
   display: flex;
   justify-content: space-between;
   margin-top: 100px;
@@ -329,28 +328,28 @@ section 4
 
 .div-4-2 {
   background-color: #fff;
-  width: 320px;
-  height: 300px;
+  width: 395px;
+  height: 350px;
 }
 
 .p-4-1-1 {
   color: #2c2c2c;
-  font-size: 20px;
+  font-size: 26px;
   text-align: right;
-  padding: 60px 40px 0px 0px;
+  padding: 60px 50px 0px 0px;
   transition: 0.3s;
 }
 
 .p-4-1-2 {
   color: #2c2c2c;
-  font-size: 20px;
+  font-size: 26px;
   text-align: left;
-  padding: 60px 0px 0px 40px;
+  padding: 60px 0px 0px 50px;
   transition: 0.3s;
 }
 
 .img-4-1 {
-  width: 300px;
+  width: 350px;
   transition: 0.3s;
   overflow: hidden;
 }
@@ -360,8 +359,8 @@ section 4
 }
 
 .img-div {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   overflow: hidden;
 }
 
@@ -374,21 +373,21 @@ section 4
 }
 
 .span-1 {
-  font-size: 26px;
+  font-size: 30px;
   font-weight: 900;
   color: #2c2c2c;
 }
 
 .div-4-3 {
   background-color: #fff;
-  width: 320px;
+  width: 395px;
 
   transition: 0.3s;
 }
 
 .div-4-4 {
   background-color: #00fff0;
-  width: 300px;
+  width: 350px;
 
   transition: 0.3s;
 }
@@ -404,7 +403,7 @@ section 4
 .div-4-0 {
   display: flex;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 
 .p-4-2 {
@@ -439,13 +438,13 @@ section 5
 }
 
 .img-first-2 {
-  width: 600px;
+  width: 700px;
   transition: 0.5s;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .img-first-2:hover {
-  width: 650px;
+  transform: scale(1.2);
 }
 
 .footer {
