--- a/css/style.css
+++ b/css/style.css
@@ -489,3 +489,150 @@ section 5
   border-radius: 10px;
   background: #00fff0;
 }
+
+/*Модальне вікно*/
+
+.modal {
+  position: fixed; /* фиксированное положение */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5); /* цвет фона */
+  z-index: 1050;
+  opacity: 0; /* по умолчанию модальное окно прозрачно */
+  -webkit-transition: opacity 200ms ease-in;
+  -moz-transition: opacity 200ms ease-in;
+  transition: opacity 200ms ease-in; /* анимация перехода */
+  pointer-events: none; /* элемент невидим для событий мыши */
+  margin: 0;
+  padding: 0;
+}
+/* при отображении модального окно */
+.modal:target {
+  opacity: 1; /* делаем окно видимым */
+  pointer-events: auto; /* элемент видим для событий мыши */
+  overflow-y: auto; /* добавляем прокрутку по y, когда элемент не помещается на страницу */
+}
+/* ширина модального окна и его отступы от экрана */
+.modal-dialog {
+  background-color: white;
+  color: #666;
+  position: relative;
+  width: auto;
+  margin: 1% 30%;
+  border-radius: 10px;
+}
+
+.modal-content {
+}
+
+/* свойства для заголовка модального окна */
+.modal-header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 15px;
+  border-bottom: 1px solid #eceeef;
+}
+.modal-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.5;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+/* свойства для кнопки "Закрыть" */
+.close {
+  float: right;
+  border: 0px solid orange;
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1;
+  color: #666;
+  opacity: 0.5;
+  text-decoration: none;
+  margin: 10px 10px 0 0;
+  border: solid 3px #666;
+  border-radius: 100px;
+  padding: 2px 7px 0 7px;
+}
+/* свойства для кнопки "Закрыть" при нахождении её в фокусе или наведении */
+.close:focus,
+.close:hover {
+  color: #2c2c2c;
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+/* свойства для блока, содержащего основное содержимое окна */
+.modal-body {
+  position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 15px;
+  overflow: auto;
+}
+
+.btn {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  color: #2c2c2c;
+  background-color: #fff;
+  border: 3px solid #2c2c2c;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 15px 25px;
+  border-radius: 50px;
+  transition: all 0.4s;
+  margin: 0 210px;
+  margin-bottom: 20px;
+}
+
+.btn:hover {
+  background-color: rgb(210, 210, 210);
+}
+
+b {
+  font-size: 30px;
+  padding-bottom: 30px;
+}
+
+.li-5-1 {
+  font-size: 20px;
+  padding-bottom: 20px;
+  color: #666;
+  text-align: left;
+  margin-right: 57px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px 0 20px 30px;
+  font-weight: 700;
+  background-color: rgb(226, 226, 226);
+}
+
+.ul-5-1 {
+  padding-left: 50px;
+  text-align: left;
+}
+
+.p-5-1 {
+  padding: 20px 0 20px 50px;
+}
