--- a/css/style.css
+++ b/css/style.css
@@ -643,3 +643,17 @@ input {
   text-align: left;
   padding: 5px 0 5px 20px;
 }
+
+@media screen and (max-width: 990px) {
+  body {
+    font-family: "Raleway", sans-serif;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background: url(../images/bgm.jpg) no-repeat top / cover;
+  }
+
+  .all {
+    display: none;
+  }
+}
