--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ header
   overflow: hidden;
   position: fixed;
   z-index: 1000;
+  top: 0;
 }
 
 .nav {
@@ -67,25 +68,45 @@ span {
   color: var(--color-main);
 }
 
+.support-ua {
+  width: 100%;
+  height: 20px;
+  margin-top: 100px;
+  color: #2c2c2c;
+  background-color: #00fff0;
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+}
+
+.support-ua > p {
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+  margin: 0;
+  padding: 0 20px;
+}
+
 /* 
 section 1
  */
 
 .section-first {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 100px);
   overflow: hidden;
   background-image: url("../images/bg1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
 }
 
 .div-first {
   display: flex;
   justify-content: space-between;
-  padding: 100px 0 0 0;
+  padding: 0px 0 0 0;
 }
 
 .div-third {
@@ -124,13 +145,40 @@ section 1
   background: rgb(212, 212, 212);
 }
 
+.third {
+  background: none;
+  color: #fff;
+  border: 3px solid #fff;
+  padding: 13.5px 58.5px;
+  margin-left: 30px;
+}
+
+.third:hover {
+  background-color: rgb(212, 212, 212);
+  color: #2c2c2c;
+  border: 3px solid transparent;
+}
+
+.mw {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  margin-left: 10%;
+}
+
+.top {
+  margin-top: 25%;
+}
+
 /* 
 section 2
  */
 
 .section-second {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 100px);
   overflow: hidden;
   background-image: url("../images/bg5-2.jpg");
   background-repeat: no-repeat;
@@ -141,7 +189,7 @@ section 2
 .div-2 {
   display: flex;
   justify-content: space-between;
-  padding: 120px 0 0 0;
+  padding: 40px 0 0 0;
 }
 
 .div-2-1 {
@@ -654,7 +702,9 @@ input {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    background: url(../images/bgm.jpg) no-repeat top / cover;
+    background: url(../images/bgm.png) no-repeat top / cover;
+    background-color: #222;
+    margin-top: 50px;
   }
 
   .all {
