--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,12 @@ section 1
 }
 
 .mw {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 5%;
+  margin-bottom: 5%;
   display: flex;
   justify-content: center;
   border-radius: 10px;
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 .top {
