--- a/css/style.css
+++ b/css/style.css
@@ -290,25 +290,13 @@ portfolio
 .portfolio__list {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -70px;
+  margin-bottom: -70px;
 }
 .portfolio__item {
-  margin-bottom: 70px;
-}
-
-.portfolio__item:last-child {
+  width: calc(100% / 3 - 70px);
   margin-left: 70px;
-}
-
-.portfolio__item:nth-child(1) {
-  margin-right: 70px;
-}
-
-.portfolio__item:nth-child(2) {
-  margin-right: 70px;
-}
-
-.portfolio__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  margin-bottom: 70px;
 }
 
 .portfolio__link:hover > .portfolio__image {
@@ -365,10 +353,11 @@ team
 }
 .team__developer {
   background-color: #fff;
-  padding: 60px 85px 0 85px;
   height: 300px;
   border-radius: 5px 0 0 5px;
   z-index: 1001;
+  display: flex;
+  align-items: center;
 }
 .team__name {
   font-size: 24px;
@@ -385,10 +374,12 @@ team
 
 .team__developer_left {
   text-align: right;
+  padding: 0 65px 0 105px;
 }
 
 .team__developer_right {
   text-align: left;
+  padding: 0 105px 0 65px;
   border-radius: 0 5px 5px 0;
 }
 
