--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,8 @@ portfolio
 .portfolio__image {
   border-radius: 5px 5px 0 0;
   display: block;
+  width: 100%;
+  object-fit: cover;
 }
 .portfolio__description {
   background-color: #fff;
