--- a/css/style.css
+++ b/css/style.css
@@ -76,13 +76,25 @@ header
 }
 .header__list {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
+
 .header__item {
+  margin-right: 50px;
+  margin-left: 0;
 }
+
+.header__item:nth-child(4) {
+  position: relative;
+  margin: 0 auto;
+}
+
+.header__item:last-child {
+  display: flex;
+}
+
 .header__link {
-  font-size: 22px;
+  font-size: 18px;
   line-height: 38px;
   color: #ffffff;
   display: flex;
@@ -91,12 +103,47 @@ header
   transition: 0.3s;
 }
 
+.header__paragraph {
+  font-size: 18px;
+  line-height: 38px;
+  color: #c8c8c8;
+  margin-left: auto;
+  margin-right: 30px;
+}
+
 .header__link:hover {
   color: var(--color-blue);
 }
 
+.header__link:first-child {
+  margin-right: 20px;
+}
+
+.header__link.google {
+  fill: #db4437;
+  background-color: #fff;
+  padding: 0;
+  border-radius: 5px;
+}
+
+.header__link.facebook {
+  fill: #4267b2;
+  background-color: #fff;
+  padding: 0;
+  border-radius: 5px;
+}
+
+.header__link.google:hover {
+  fill: #fff;
+  background-color: #db4437;
+}
+
+.header__link.facebook:hover {
+  fill: #fff;
+  background-color: #4267b2;
+}
+
 .header__logo {
-  margin: 0 300px;
 }
 
 /*------------------------------------------ 
@@ -129,6 +176,7 @@ hero
   padding-top: 3px;
   padding-bottom: 3px;
   margin-bottom: 3%;
+  user-select: none;
 }
 
 .hero__container {
@@ -159,6 +207,15 @@ hero
   font-size: 24px;
   line-height: 29px;
   color: #fff;
+  margin-bottom: 40px;
+  max-width: 600px;
+}
+
+.hero__paragraph:first-child {
+  font-size: 45px;
+  font-weight: 900;
+  line-height: 29px;
+  color: rgba(255, 255, 255, 0.3);
   margin-bottom: 40px;
   max-width: 600px;
 }
@@ -276,6 +333,7 @@ portfolio
   background-image: url(../images/bg4.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .portfolio__title {
@@ -533,6 +591,7 @@ footer
 
 .footer__link {
   color: #fff;
+  font-size: 14px;
 }
 
 .footer__link:first-child {
