--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ header
 }
 
 .header__item {
-  margin-right: 20px;
   margin-left: 0;
 }
 
@@ -682,16 +681,24 @@ footer
 
 .footer__container {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 }
 
 .footer__logo {
   padding: 20px 0;
 }
 
+.footer__paragraph {
+  color: #b5b5b5;
+  font-size: 14px;
+  margin-left: 40px;
+  max-width: 350px;
+}
+
 .footer__contacts_center {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .footer__contacts {
