--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,10 @@ a {
   color: var(--color-blue);
 }
 
+input {
+  outline: none;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -340,7 +344,7 @@ about-us
 
 .about-us__icon {
   margin-bottom: 40px;
-  fill: var(--color-text-black);
+  fill: rgba(0, 0, 0, 0.4);
   transition: 0.3s;
 }
 
@@ -736,180 +740,101 @@ footer
 
 /* modal */
 
-.modal {
+.backdrop {
   position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1050;
-  opacity: 0;
-  -webkit-transition: opacity 200ms ease-in;
-  -moz-transition: opacity 200ms ease-in;
-  transition: opacity 200ms ease-in;
-  pointer-events: none;
-  margin: 0;
-  padding: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: 0.3;
+  z-index: 2000;
 }
 
-.modal:target {
-  opacity: 1;
-  pointer-events: auto;
-  overflow-y: auto;
-}
-
-.modal-dialog {
-  background-color: white;
-  color: #666;
-  position: relative;
-  width: auto;
-  margin: 0.5% 30%;
-  border-radius: 10px;
-}
-
-.modal-content {
-}
-
-.modal-header {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 15px;
-  border-bottom: 1px solid #eceeef;
-}
-.modal-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 1.5;
-  font-size: 1.25rem;
-  font-weight: 500;
-}
-
-.close {
-  float: right;
-  border: 0px solid orange;
-  font-family: sans-serif;
-  font-size: 30px;
-  font-weight: 100;
-  line-height: 1;
-  color: #666;
-  opacity: 0.5;
-  text-decoration: none;
-  margin: 10px 10px 0 0;
-  border: solid 2px #666;
-  border-radius: 100px;
-  padding: 2px 7px 0 7px;
-}
-
-.close:focus,
-.close:hover {
-  color: #2c2c2c;
-  text-decoration: none;
-  cursor: pointer;
-  opacity: 0.75;
-}
-
-.modal-body {
-  position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 15px;
-  padding-bottom: 30px;
-  overflow: auto;
-}
-
-.modal-body__top {
-  margin-top: 30%;
-}
-
-.modal-body__bottom {
-  margin-top: 5%;
-}
-
-.modal__button {
-  display: inline-block;
-  vertical-align: top;
-  font-size: 20px;
-  justify-content: center;
-  text-align: center;
-  text-decoration: none;
-  color: #2c2c2c;
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  padding: 20px 20px;
   background-color: #fff;
-  border: 2px solid #2c2c2c;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 15px 25px;
-  border-radius: 50px;
-  transition: all 0.4s;
-  margin: 0 210px;
-  margin-top: 20px;
-  cursor: pointer;
-}
-
-.modal__button:hover {
-  background-color: rgb(240, 240, 240);
-}
-
-.modal__image {
-  margin-top: 5%;
-  margin-bottom: 0;
-  display: flex;
-  justify-content: center;
-  border-radius: 10px;
-  margin-left: 5%;
-}
-
-.modal__item {
-  font-size: 20px;
-  padding-bottom: 20px;
-  color: #666;
-  text-align: left;
-  margin-right: 57px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 5px 0 20px 30px;
-  font-weight: 700;
-  border: 2px rgb(226, 226, 226) solid;
   border-radius: 5px;
 }
 
-.modal__list {
-  padding-left: 50px;
-  text-align: left;
+.modal__button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.modal__paragraph {
-  padding: 20px 0 20px 50px;
-  font-size: 22px;
-  font-weight: 100;
+.modal__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal__image {
+  width: 100%;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+
+.modal__button_gs {
+  border: 2px var(--color-text-black) solid;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 50px;
+  display: block;
+  max-width: 180px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.modal__button_gs:hover {
+  background-color: rgb(240, 240, 240);
+}
+
+/* modal-bottom-content */
+
+.modal__bottom {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  padding: 40px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.modal__item {
+  margin-bottom: 40px;
+}
 .modal__item_paragraph {
-  padding: 20px 0;
-  font-weight: 100;
+  margin-bottom: 20px;
 }
-
 .modal__input {
   border: none;
-  border-bottom: 1px solid var(--color-bg);
-  background-color: inherit;
-  color: var(--color-text-black);
-  padding: 0 10px;
+  border-bottom: 1px rgba(0, 0, 0, 0.4) solid;
+  padding-left: 10px;
+}
+.modal__button_send {
+  border: 2px var(--color-text-black) solid;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 50px;
+  display: block;
+  max-width: 180px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #fff;
 }
 
-.modal__input::selection {
-  border: none;
-  border-bottom: 1px solid var(--color-bg);
+.modal__button_send:hover {
+  background-color: rgb(240, 240, 240);
 }
