--- a/css/style.css
+++ b/css/style.css
@@ -337,12 +337,12 @@ about-us
   flex-direction: column;
   align-items: center;
   background-color: #fff;
-
-  box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
 }
-
+.about-us__item:hover {
+  box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
+}
 .about-us__icon {
   margin-bottom: 40px;
   fill: rgba(0, 0, 0, 0.4);
@@ -400,15 +400,13 @@ portfolio
   width: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
-  box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  transition: 0.3s;
 }
-
-.portfolio__link:hover > .portfolio__image {
-  -webkit-filter: brightness(0.6);
-  filter: brightness(0.6);
+.portfolio__item:hover {
+  box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px -1px 11px 1px rgba(0, 0, 0, 0.2);
 }
 
 .portfolio__link {
@@ -427,7 +425,30 @@ portfolio
   padding-top: 15px;
   padding-bottom: 15px;
 }
-
+.portfolio__thumb {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio__overlay {
+  position: absolute;
+  top: 0;
+  transform: translateY(100%);
+  background-color: rgba(10, 10, 10, 0.8);
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 5px 0 0;
+  padding: 30px;
+  transition: transform 0.3s;
+}
+.portfolio__item:hover .portfolio__overlay {
+  transform: translateY(0);
+}
+.portfolio__description_content {
+  background-color: transparent;
+  color: #fff;
+  text-align: left;
+  margin-bottom: 50px;
+}
 /*------------------------------------------ 
 team
 ------------------------------------------*/
@@ -764,6 +785,17 @@ footer
   padding: 20px 20px;
   background-color: #fff;
   border-radius: 5px;
+}
+
+.modal__image_bottom {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: -7%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 2000;
+  pointer-events: none;
 }
 
 .modal__button {
